--- a/index.html
+++ b/index.html
@@ -2,8 +2,23 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="styles.css">
+    <title>Rock, Paper, Scissors!</title>
 </head>
 <body>
+    <div>
+        <p id="result">Your Turn. First to reach 5 points wins.</p>
+    </div>
+    <div>
+        <button id="rock" class="btn"><img class="img" src="rock_39413.png"></button>
+        <button id="paper" class="btn"><img class="img" src="paper_38485.png"></button>
+        <button id="scissors" class="btn"><img class="img" src="scissors_39412.png"></button>
+    </div>
+    <div class="container">
+        <p id="computer">Computer's score: 0</p>
+        <p id="player">Your score: 0</p>        
+    </div>
+
     <script src="scripts.js"></script>
 </body>
 </html>
